<resources>


    <!--페이스북 -->
    <!--테스트 267983533660558-->
    <!--상용 359649194443577-->
    <string name="app_id">359649194443577</string>
    <!--카카오톡-->
    <!--테스트 192ac8c8317a1ae0c131cd624b0ddf3c-->
    <!--상용 1c7a45162614704aa55e8ae873c6af4e-->
    <string name="kakao_app_key">1c7a45162614704aa55e8ae873c6af4e</string>
    <string name="kakao_scheme">kakao1c7a45162614704aa55e8ae873c6af4e</string>
    <string name="kakaolink_host">kakaolink</string>


    <!--   낙현
    <string name="full_banner_ad_unit_id">ca-app-pub-1410685208575107/8894284679</string>-->

    <!--   나
    <string name="full_banner_ad_unit_id">ca-app-pub-1410685208575107/9373099075</string>-->

    <string name="full_banner_ad_unit_id">ca-app-pub-1410685208575107/5733209382</string>

    <string name="app_name">부자되는 글</string>
    <string name="backkey">한번 더 누르시면 종료됩니다.</string>
    <string name="main_finish">앱을 종료 하시겠습니까?</string>
    <string name="main_admob_popup_title">수익성을 위해서 광고를 사용하니 양해부탁드리며 앞으로도 부자되는 글 많은 관심을 부탁드립니다.</string>
    <string name="please_on_location_service">위치정보를 켜주셔야 현재 위치의 날씨를 알수 있습니다.</string>
    <!-- volley -->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="search">검색</string>
    <string name="result_is_null">Result is null.</string>
    <string name="time_out_server">서버 접속 시간을 초과 하였습니다.\n네트워크 상태가 정상인지 확인 후에 다시 시도해 주세요.</string>
    <string name="please_wait">잠시만 기다려 주세요&#8230;</string>
    <string name="network_error">인터넷에 연결할 수 없습니다. 확인 후 다시 시도하여 주십시오.</string>
    <string name="intro_msg_new_update">새로운 버전이 있습니다. 업데이트 하시겠습니까?</string>
    <string name="title_activity_init">InitActivity</string>

    <!-- 메인화면 -->
    <string name="section_good_write">좋은글</string>
    <string name="section_good_movie">좋은 영상</string>
    <string name="section_good_best">인기글</string>
    <string name="section_good_storage">보관함</string>
    <!-- 왼쪽 메뉴-->
    <string name="left_setting">설정</string>
    <string name="left_storage">보관함</string>
    <string name="left_notice">공지사항</string>
    <string name="left_1on1">1:1문의</string>
    <string name="left_share">공유하기</string>
    <string name="left_assess">평가하기</string>
    <string name="left_question">자주하는 질문</string>
    <!-- 설정 -->
    <string name="setting_title">설 정</string>
    <string name="none_nickname">닉네임을 입력</string>
    <string name="setting_weather">현재 위치의 날씨를 보여줍니다.</string>
    <string name="setting_push">알림</string>
    <string name="setting_login">로그인</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_break">탈퇴</string>
    <string name="setting_use_notice">이용약관</string>
    <string name="setting_info_notice">개인정보 취급방침</string>
    <string name="setting_info_logout">정말 로그아웃 하시겠습니까?</string>
    <string name="setting_info_leave">회원탈퇴를 하시겠습니까?</string>
    <string name="setting_info_leave02">모든 회원 데이터들이 삭제됩니다.\n탈퇴 하시겠습니까?</string>
    <string name="setting_login_q">로그인을 하시겠습니까?</string>
    <string name="weather_on">현재위치의 날씨를 보여지도록 합니다.</string>
    <string name="weather_off">현재위치의 날씨를 사라지게 합니다.</string>
    <string name="push_on">부자되는 글,글속 구독이 완료되었습니다.</string>
    <string name="push_off">부자되는 글,글속 구독이 취소되었습니다.</string>

    <!-- 보관함 -->
    <string name="storage_title">보관함</string>


    <!-- 닉네임 변경 -->
    <string name="nickname_title">프로필 편집</string>
    <string name="nickname_txt">닉네임을 입력해주세요.</string>
    <string name="nickname_empty">닉네임을 입력하세요.</string>
    <!-- 사진 편집 -->
    <string name="profile_image_title">프로필 사진 편집</string>
    <string name="profile_image_camera">사진 촬영</string>
    <string name="profile_image_album">앨범에서 사진 선택</string>

    <!-- 카카오톡 인증-->
    <string name="kakao_confirm">카카오톡 인증을 하였습니다.</string>
    <string name="user_state_b">이용정지 되었습니다.</string>

    <!-- 공지사항 -->
    <string name="notice_title">공지사항</string>
    <string name="none_notice_list">공지 목록이 없습니다.</string>
    <!-- 1:1문의 -->
    <string name="board_1on1_title">1:1문의하기</string>
    <string name="str_title">제목</string>
    <string name="str_contents">내용</string>
    <string name="str_none_title">제목을 입력하세요.</string>
    <string name="str_none_contents">내용을 입력하세요.</string>
    <string name="str_write_complete">등록이 완료되었습니다.</string>

    <!-- 평가하기 -->
    <string name="access_title">부자되는 글 평가하기</string>
    <string name="aceess_contents">부자되는 글을 응원해주세요.\n좋은 글로 보답하겠습니다.\n지금 바로 부자되는 글, 좋은글을 평가하시겠습니까?</string>
    <string name="access_ok">지금,평가할게요!</string>
    <string name="access_no">안 할래요.</string>
    <string name="access_after">나중에 할게요.</string>

    <!-- 상품 상세화면 -->
    <string name="goods_bottom_like">좋아요</string>
    <string name="goods_bottom_comment">댓글달기</string>
    <string name="goods_bottom_share">공유하기</string>
    <string name="goods_comment_empty">댓글을 입력하세요.</string>
    <string name="goods_comment_hint">불쾌감을 조성하는 댓글은 삼가해주세요.</string>
    <string name="goods_comment_submit">전송</string>
    <string name="goods_like_complete">좋아요 하였습니다.</string>
    <string name="comment_modify">댓글 수정</string>
    <string name="comment_delete">댓글 삭제하기</string>
    <string name="comment_delete_q">댓글을 삭제하시겠습니까?</string>
    <string name="comment_edit_str">편집</string>
    <string name="image_capture">이미지가 download 폴더에 저장되었습니다.</string>
    <string name="comment_view">댓글 전체보기</string>

    <!-- 날씨 상세 화면-->
    <string name="weather_dust_title">미세먼지</string>
    <string name="weather_dust_info01">미세먼지 정보</string>
    <string name="weather_dust_info02">미세먼지 정보는 환경부 한국환경공단(http://www.airkorea.co.kr)에서 실시간으로 제공하는 정보이며 관측소 또는 수신상태에 따라 차이가 발생할 수 있습니다.</string>
    <string name="weather_link">자세히 보기</string>

    <!-- 댓글 리스트 -->
    <string name="comment_title">댓글 리스트</string>
    <!-- 공유 팝업 화면-->
    <string name="share_title_user">좋은 마음을 공유해보세요.</string>

    <!-- 종료 팝업 화면-->
    <string name="finish_ad_ment">앱 서비스를 운영하는데 필요한 서버, 운영 유지를 위하여 불가피하게 광고를 삽입하였습니다.\n리뷰와 광고 클릭으로 좋은 글을 제공할 수 있도록 최선을 다하겠습니다.\n감사합니다.</string>

    <!-- 좋은 글 리스트-->
    <string name="none_goods_board_list">글 목록이 없습니다.</string>

    <!-- 유튜브-->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_ka_kao">KaKaoActivity</string>
    <string name="title_activity_nickname_change">NicknameChangeActivity</string>
    <string name="title_activity_profile_image">ProfileImageActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_board_write">BoardWriteActivity</string>
    <string name="title_activity_goods_detail">GoodsDetailActivity</string>
    <string name="title_activity_comment_modify">CommentModifyActivity</string>
    <string name="title_activity_goods_search">GoodsSearchActivity</string>
    <string name="title_activity_finish_popup">FinishPopupActivity</string>
    <string name="title_activity_question_web_view">QuestionWebViewActivity</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="title_activity_goods_image_pager_adapter">GoodsImagePagerAdapter</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="rationale_title">권한요청</string>
    <string name="rationale_message">앱 실행을 위해 <b>위치정보</b>와 <b>파일접근</b> 권한이 필요합니다.</string>
    <string name="permission_activity_title">부자되는 글을 사용하기 위해서는 아래 두가지 권한을 허용해주셔야 합니다.</string>
    <string name="battery_text">배터리 최적화로 설정되어 있을 경우 <b> 운행일지가 정삭적으로 기록되지 않을 수 있습니다.</b></string>


    <string name="location_text">위치정보를 통해 날씨 정보를 받아오는 데 필요한 권한입니다.</string>
    <string name="file_text">내 기기에서 사진 파일을 불러와 프로필 사진 등록을 하는 데 필요한 권한입니다.</string>

    <string name="camera_text">핸드폰의 카메라 촬영으로 영수증 등록을 하는데 필요한 권한입니다.</string>
    <string name="bottom_text">권한 허용 후 카택스를 시작합니다.</string>
    <string name="permission_ok">허용하기</string>
</resources>
