<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_default_18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:text="@string/aceess_contents"
                android:textColor="@color/many_gray"
                android:textSize="@dimen/font_default_16dp" />


            <TextView
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:gravity="right"
                android:text="@string/access_ok"
                android:textColor="@color/sky_blue"
                android:textSize="@dimen/font_default_16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:fontFamily="serif"
                android:gravity="right"
                android:text="@string/access_no"
                android:textColor="@color/sky_blue"
                android:textSize="@dimen/font_default_16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:fontFamily="serif"
                android:gravity="right"
                android:text="@string/access_after"
                android:textColor="@color/sky_blue"
                android:textSize="@dimen/font_default_16dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>