<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_01_white_arrow"
            android:onClick="menuClick"></ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/board_1on1_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_default_20dp"></TextView>

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="menuClick"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/font_default_20dp"></TextView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTitle"
            style="@style/input_text"
            android:layout_weight="1"
            android:gravity="center|left"
            android:hint="@string/str_title"
            android:singleLine="true"></EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"
            android:background="@color/gray"></LinearLayout>

        <EditText
            android:id="@+id/editContents"
            style="@style/input_text"
            android:layout_weight="8"
            android:gravity="top"
            android:hint="@string/str_contents"></EditText>

    </LinearLayout>

</LinearLayout>