<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_01_white_arrow"
            android:onClick="menuClick"></ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nickname_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_default_20dp"></TextView>

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="menuClick"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/font_default_20dp"></TextView>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname_txt"
                android:textColor="@color/many_gray"
                android:textSize="@dimen/font_default_18dp" />

            <RelativeLayout
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <EditText
                    android:maxLength="10"
                    android:singleLine="true"
                    android:id="@+id/editNickname"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/transparent"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_default_16dp" />

                <ImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/menu_04_option_03"
                    android:onClick="menuClick" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>
    </FrameLayout>

</LinearLayout>