<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activity.PermissionActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <include layout="@layout/include_custom_image_actionbar" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/permission_activity_title"
                            android:textColor="@color/font_black"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/divider_view" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:drawableLeft="@mipmap/ic_gps_fixed_black_24px"
                            android:drawablePadding="3dp"
                            android:text="위치정보"
                            android:textColor="@android:color/black"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/location_text"
                            android:textColor="@color/permission_text"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/divider_view" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:drawableLeft="@mipmap/floppy_disk_save_file"
                            android:drawablePadding="5dp"
                            android:text="저장공간"
                            android:textColor="@android:color/black"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/file_text"
                            android:textColor="@color/permission_text"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/divider_view" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bottom_text"
                            android:textColor="@color/permission_dark_gray"
                            android:textSize="14dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="아래 &#39;허용하기&#39;를 눌러 권한을 허용해주세요"
                            android:textColor="@color/permission_dark_gray"
                            android:textSize="14dp" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/permission_button_bg"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="20dp">

                <Button
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:onClick="permission_check"
                    android:padding="20dp"
                    android:text="@string/permission_ok"
                    android:textSize="20dp"
                    android:theme="@style/AppTheme.BlueButton" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
