<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_sky"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_01_white_arrow"
            android:onClick="menuClick"></ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile_image_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_default_20dp"></TextView>

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="menuClick"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/font_default_20dp"></TextView>


    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp">

                    <RelativeLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/menu_04_option_05_00">


                        <ImageView
                            android:id="@+id/imgProfile"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_centerInParent="true"
                            android:adjustViewBounds="true"
                            android:onClick="menuClick"
                            android:scaleType="centerCrop"></ImageView>

                        <ImageView
                            android:id="@+id/imgSqr"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/menu_04_option_02" />
                    </RelativeLayout>
                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/linearBg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:padding="10dp"></LinearLayout>
                </HorizontalScrollView>


                <RelativeLayout
                    android:id="@+id/btnCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="menuClick"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/profile_image_camera"
                        android:textColor="@color/many_gray"
                        android:textSize="@dimen/font_default_15dp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/some_gray"
                    android:orientation="vertical"></LinearLayout>

                <RelativeLayout
                    android:id="@+id/btnGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:onClick="menuClick"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/profile_image_album"
                        android:textColor="@color/many_gray"
                        android:textSize="@dimen/font_default_15dp" />
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>
    </FrameLayout>

</LinearLayout>